[project]
name = "trail-angel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.0",
    "h11>=0.16.0",
    "httpx-sse>=0.4.0",
    "langchain-community>=0.3.24",
    "langgraph>=0.4.5",
    "pip>=25.1.1",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sse-starlette>=2.3.5",
    "starlette>=0.46.2",
]
